--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-google-autocomplete": "^1.1.0",
     "react-google-maps": "^9.4.5",
     "react-redux": "^7.0.3",
     "react-scripts": "3.0.1",
@@ -18,7 +19,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint src/**/*.js"
+    "lint": "eslint src/**/*.js --fix --quiet"
   },
   "eslintConfig": {
     "extends": "react-app"
