--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint src/**/*.js --fix --quiet"
+    "lint": "eslint src/**/*.js --fix --quiet",
+    "now-build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": "react-app"
