--- a/package.json
+++ b/package.json
@@ -3,7 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cluster": "^0.7.7",
+    "config": "^3.1.0",
+    "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "mongoose": "^5.5.14",
+    "morgan": "^1.9.1",
     "node-sass": "^4.12.0",
+    "os": "^0.1.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-google-autocomplete": "^1.1.0",
@@ -20,7 +29,11 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint src/**/*.js --fix --quiet",
-    "now-build": "react-scripts build"
+    "now-build": "react-scripts build",
+    "mongod": "sudo service mongod start",
+    "mongodb-win": "mongod",
+    "mongo": "mongo --host 127.0.0.1:27017",
+    "server": "node index.js"
   },
   "eslintConfig": {
     "extends": "react-app"
