--- a/package.json
+++ b/package.json
@@ -26,14 +26,16 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint src/**/*.js --fix --quiet",
     "now-build": "react-scripts build",
     "mongod": "sudo service mongod start",
     "mongodb-win": "mongod",
     "mongo": "mongo --host 127.0.0.1:27017",
-    "server": "node index.js"
+    "server": "node index.js",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage --colors"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -51,10 +53,15 @@
     ]
   },
   "devDependencies": {
+    "chai": "^4.2.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.13.0"
+    "eslint-plugin-react": "^7.13.0",
+    "fetch-mock": "^7.3.3",
+    "redux-mock-store": "^1.5.3"
   }
 }
