--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "lint": "eslint src/**/*.js --fix --quiet",
-    "now-build": "react-scripts build",
+    "now-build": "react-scripts build && node index.js",
     "mongod": "sudo service mongod start",
     "mongodb-win": "mongod",
     "mongo": "mongo --host 127.0.0.1:27017",
