--- a/now.json
+++ b/now.json
@@ -2,7 +2,8 @@
   "version": 2,
   "name": "geocode-react-app",
   "builds": [
-    {"src": "index.js", "use": "@now/node-server"}
+    {"src": "index.js", "use": "@now/node-server"},
+    {"src": "/server/routes/placesApiRoute.js", "use": "@now/node"}
   ],
   "routes": [
     { "src": "/api/(.*)", "dest": "index.js" }
