--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "morgan": "^1.9.1",
     "node-sass": "^4.12.0",
     "os": "^0.1.1",
+    "path": "^0.12.7",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-google-autocomplete": "^1.1.0",
@@ -28,11 +29,11 @@
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "lint": "eslint src/**/*.js --fix --quiet",
-    "now-build": "react-scripts build && node index.js",
+    "now-build": "react-scripts build",
     "mongod": "sudo service mongod start",
     "mongodb-win": "mongod",
     "mongo": "mongo --host 127.0.0.1:27017",
-    "server": "node index.js",
+    "server": "node server.js",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage --colors"
