--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "babel-core": "^6.26.3",
     "babel-jest": "^24.8.0",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
     "chai": "^4.2.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
